Fix build issues: disable Windows target, add missing commands, enable XAML binding optimizations
- Temporarily disabled Windows target due to .NET 9 preview resizetizer issue
- Added missing ToggleSubscriptionStatus, EditSubscription, and DeleteSubscription commands to SubscriptionsViewModel
- Added missing MarkAsPaid, EditInvoice, and DeleteInvoice commands to InvoicesViewModel
- Fixed method name collisions by renaming DeleteInvoiceAsync to DeleteInvoiceByIdAsync and similar
- Enabled MauiEnableXamlCBindingWithSourceCompilation for better XAML performance
- Build now succeeds for Android, iOS, and macOS targets

--- a/ExpenseTracker/ExpenseTracker.csproj
+++ b/ExpenseTracker/ExpenseTracker.csproj
@@ -2,7 +2,8 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
+		<!-- Temporarily disabled Windows due to .NET 9 preview resizetizer issue -->
+		<!-- <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks> -->
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net9.0-tizen</TargetFrameworks> -->
 
@@ -32,6 +33,9 @@
 
 		<!-- To develop, package, and publish an app to the Microsoft Store, see: https://aka.ms/MauiTemplateUnpackaged -->
 		<WindowsPackageType>None</WindowsPackageType>
+
+		<!-- Enable XAML binding compilation optimizations -->
+		<MauiEnableXamlCBindingWithSourceCompilation>true</MauiEnableXamlCBindingWithSourceCompilation>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
